--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,7 @@ jobs:
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.0
         with:
+          custom_tag: 'v7.0.12'
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create a GitHub release
