--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,29 +9,8 @@ jobs:
     steps: 
       - uses: actions/checkout@v2
 
-      - name: Bump version and push tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v6.0
-        with:
-          custom_tag: 'v7.0.12'
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Create a GitHub release
-        uses: ncipollo/release-action@v1
-        with:
-          tag: ${{ steps.tag_version.outputs.new_tag }}
-          name: Release ${{ steps.tag_version.outputs.new_tag }}
-          body: ${{ steps.tag_version.outputs.changelog }}
-
-      - name: Create branch
-        uses: peterjgrainger/action-create-branch@v2.2.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          branch: 'release_${{ steps.tag_version.outputs.new_tag }}'
-          sha: '${{ github.event.pull_request.head.sha }}'
-
-      - id: set_var
+      - name: Read package json version
+        id: read_package_json_version
         run: |
           content=`cat ./package.json`
           # the following lines are only required for multi line json
@@ -41,4 +20,21 @@ jobs:
           # end of optional handling for multi line json
           echo "::set-output name=packageJson::$content"
       - run: |
-          echo "${{fromJson(steps.set_var.outputs.packageJson).version}}"
+          echo "${{fromJson(steps.read_package_json_version.outputs.packageJson).version}}"
+
+      - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.0
+        with:
+          custom_tag: "${{fromJson(steps.read_package_json_version.outputs.packageJson).version}}"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create branch
+        uses: peterjgrainger/action-create-branch@v2.2.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          branch: 'release_${{ steps.tag_version.outputs.new_tag }}'
+          sha: '${{ github.event.pull_request.head.sha }}'
+
+      
