--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@FantinPro/npm-package-test",
-    "version": "1.4.8",
+    "version": "1..110",
     "description": "",
     "main": "index.js",
     "scripts": {
