--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,10 @@ jobs:
         with:
           fetch-depth: 0 # Required due to the way Git works, without it this action won't be able to find any or the correct tags
 
+      - run: |
+          git fetch --tags
+          echo $(git tag | tail -1)
+      
       - name: Read package json version
         id: read_package_json_version
         run: |
