--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -1,8 +1,9 @@
-name: test
+name: Deploy package from master
 
 on:
-  workflow_dispatch:
-
+  push:
+    branches:
+      - master
 jobs:
   create-tag:
     runs-on: ubuntu-latest
@@ -54,13 +55,33 @@ jobs:
         with:
           custom_tag: "${{fromJson(steps.read_package_json_version.outputs.packageJson).version}}"
           github_token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Create branch
-        uses: peterjgrainger/action-create-branch@v2.2.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+  build:
+    needs: create-tag
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          branch: 'release_${{ steps.tag_version.outputs.new_tag }}'
-          sha: '${{ github.event.pull_request.head.sha }}'
+          node-version: 12
+      - run: npm ci
+      - run: npm test
+
+  publish-gpr:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 12
+          registry-url: https://npm.pkg.github.com/
+      - run: npm ci
+      - run: npm publish --tag old-version
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
       
