--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -19,7 +19,7 @@ jobs:
           git fetch --tags
           version=$(git tag | tail -1)
           echo "Greatest tag: $version"
-          echo "::set-output name=version::$version"
+          echo "::set-output name=version::${version:1}"
       
       - name: Read package json version
         id: read_package_json_version
