--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -20,12 +20,19 @@ jobs:
           echo "Greatest tag: $version"
           echo "::set-output name=version::$version"
 
+          versionWithoutV=${version:1}
+          versionSplittedByDot=(${versionWithoutV//./ })
+
+          branchVersionNameWithoutPatch=release_v${versionSplittedByDot[0]}.${versionSplittedByDot[1]}
+
+          echo "::set-output name=branchVersionNameWithoutPatch::$branchVersionNameWithoutPatch"
+
       - name: Create branch
         uses: peterjgrainger/action-create-branch@v2.2.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          branch: 'release_${{ steps.get_greatest_tag.outputs.version }}'
+          branch: '${{ steps.get_greatest_tag.outputs.branchVersionNameWithoutPatch }}'
           sha: '${{ github.event.pull_request.head.sha }}'
 
       - name: Compute Next Minor Version
